# ai-coding

./: .cursorrules  CLAUDE.md  README.md  SETUP_COMMANDS.md  docker-compose.yml
__DO_NOT_READ_OR_UPDATE__/: AI_INFERENCE_SERVICE.md  CLAUDE.md.example  DISEASE_RISK_ANALYSIS.md
client/: package-lock.json  package.json
client/src/: App.vue  main.ts
client/src/components/: DiseaseRiskAnalysis.vue
client/src/composables/: useRiskPrediction.ts
docs/: README.md
server/: pyproject.toml
server/app/: __init__.py  main.py
server/app/api/v1/: __init__.py  predict.py
server/app/core/: config.py
server/app/schemas/: disease_risk.py
server/app/services/: risk_engine.py
